tests/snapshots/file@variable@scope_reuse_in_different_blocks.lox.snap
---
source: tests/common/mod.rs
description: "{\n  var a = \"first\";\n  print a; // expect: first\n}\n\n{\n  var a = \"second\";\n  print a; // expect: second\n}\n"
input_file: crafting_interpreters_test_files/variable/scope_reuse_in_different_blocks.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '{'
   ╭─[1:1]
 1 │ {
   · ┬
   · ╰── here
 2 │   var a = "first";
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[4:1]
 3 │   print a; // expect: first
 4 │ }
   · ┬
   · ╰── here
 5 │ 
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[9:1]
 8 │   print a; // expect: second
 9 │ }
   · ┬
   · ╰── here
   ╰────
