tests/snapshots/file@variable@shadow_global.lox.snap
---
source: tests/common/mod.rs
description: "var a = \"global\";\n{\n  var a = \"shadow\";\n  print a; // expect: shadow\n}\nprint a; // expect: global\n"
input_file: crafting_interpreters_test_files/variable/shadow_global.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '{'
   ╭─[2:1]
 1 │ var a = "global";
 2 │ {
   · ┬
   · ╰── here
 3 │   var a = "shadow";
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[5:1]
 4 │   print a; // expect: shadow
 5 │ }
   · ┬
   · ╰── here
 6 │ print a; // expect: global
   ╰────
