tests/snapshots/file@variable@undefined_local.lox.snap
---
source: tests/common/mod.rs
description: "{\n  print notDefined;  // expect runtime error: Undefined variable 'notDefined'.\n}\n"
input_file: crafting_interpreters_test_files/variable/undefined_local.lox
---
OUT: 

===
ERR: 
  × undefined variable `notDefined`
   ╭─[2:9]
 1 │ {
 2 │   print notDefined;  // expect runtime error: Undefined variable 'notDefined'.
   ·         ─────┬────
   ·              ╰── here
 3 │ }
   ╰────
