tests/snapshots/file@variable@use_false_as_var.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'false': Expect variable name.\nvar false = \"value\";\n"
input_file: test_files/variable/use_false_as_var.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected Ident, found 'false'
   ╭─[2:5]
 1 │ // [line 2] Error at 'false': Expect variable name.
 2 │ var false = "value";
   ·     ──┬──
   ·       ╰── here
   ╰────
