tests/snapshots/file@variable@use_local_in_initializer.lox.snap
---
source: tests/common/mod.rs
description: "var a = \"outer\";\n{\n  var a = a; // Error at 'a': Can't read local variable in its own initializer.\n}\n"
input_file: crafting_interpreters_test_files/variable/use_local_in_initializer.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '{'
   ╭─[2:1]
 1 │ var a = "outer";
 2 │ {
   · ┬
   · ╰── here
 3 │   var a = a; // Error at 'a': Can't read local variable in its own initializer.
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[4:1]
 3 │   var a = a; // Error at 'a': Can't read local variable in its own initializer.
 4 │ }
   · ┬
   · ╰── here
   ╰────
